--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,16 +1,18 @@
 .container{
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: linear-gradient(#121212, #212b46);
+    height: 100vh;
+    background: linear-gradient(#295872, #8dbeda);
 }
 
 .title{
     font-size: 85px;
     color: white;
     animation: flipTitle 1s;
+    cursor: text;
+    text-align: center;
 }
 
 .containerInput{
@@ -54,36 +56,80 @@
     align-items: center;
     flex-direction: column;
     width: 500px;
-    border-radius: 38px;
-    background: linear-gradient(145deg, #f0f0f0, #cacaca);
-    box-shadow:  28px 28px 56px #121212, -28px -28px 56px #212b46;
+    border-radius: 50px;
+    background: #e0e0e0;
+    box-shadow: inset -31px 31px 62px #a1a1a1,  inset 31px -31px 62px #ffffff;
+
     transition: width 1s 0.5s;
 }
-.main:hover{
-    width: 600px;
-}
 
-.main h2{
+/**/
+.card {
+    width: 500px;
+    height: 300px;
+    background: #465972;
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+    border-radius: 20px;
+    margin-top: 50px;
+  }
+  
+  .card h2,span {
+    z-index: 1;
+    color: white;
+  }
+
+  .card h2{
     margin: 16px 0;
     font-size: 39px;
-}
-
-.main span{
-    margin-bottom: 16px;
-    font-weight: bold;
-}
+  }
+  
+  .card::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
+    height: 230%;
+    animation: rotBGimg 4s linear infinite;
+    transition: all 0.2s linear;
+  }
+  
+  @keyframes rotBGimg {
+    from {
+      transform: rotate(0deg);
+    }
+  
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .card::after {
+    content: '';
+    position: absolute;
+    background: #465972;
+    inset: 5px;
+    border-radius: 15px;
+  }  
+/**/
 
 
 @media (max-width: 620px) {
     .title{
         font-size: 60px;
+        text-align: center;
     }
-    .main h2{
+    .card h2{
         font-size: 28px;
     }
-    .main{
+    .card{
         width: 80%;
         min-height: 250px;
+        transition: 0;
     }
 }
 
